--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "polymer build --entrypoint app/index.html",
     "lint": "polymer lint",
     "rm-build": "rm -rf build/",
-    "serve-app": "polymer serve -o",
+    "serve-app": "polymer serve -o -p 8088",
     "serve-build-b": "cd build/bundled/ && npm run serve-app",
     "serve-build-u": "cd build/unbundled/ && npm run serve-app",
     "test-skip-si": "polymer test --skip-selenium-install"
