--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "description": "Frontend for is-there-a-movie",
   "private": true,
   "scripts": {
-    "build": "polymer build --entrypoint app/index.html",
-    "lint": "polymer lint",
-    "rm-build": "rm -rf build/",
-    "serve-app": "polymer serve -o -p 8088",
-    "serve-build-b": "cd build/bundled/ && npm run serve-app",
-    "serve-build-u": "cd build/unbundled/ && npm run serve-app",
-    "test-skip-si": "polymer test --skip-selenium-install"
+    "build": "gulp build",
+    "clean": "gulp clean",
+    "deploy": "gulp deploy",
+    "lint": "gulp lint",
+    "serve": "gulp serve",
+    "serve-bundled": "gulp serve-bundled",
+    "serve-unbundled": "gulp serve-unbundled",
+    "test": "gulp test",
+    "test-skip-si": "gulp test-skip"
+  },
+  "devDependencies": {
+    "del": "^2.2.1",
+    "gulp": "^3.9.1",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-run": "^1.7.1",
+    "merge-stream": "^1.0.0"
   }
 }
