--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-run": "^1.7.1",
+    "gulp-vulcanize": "^6.1.0",
     "merge-stream": "^1.0.0"
   }
 }
