--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "is-there-a-movie-frontend",
   "description": "Frontend for is-there-a-movie",
+  "version": "0.0.5",
   "private": true,
   "scripts": {
     "build": "gulp lint && mv gulpfile.js tmp.js && polymer build --entrypoint app/index.html && mv tmp.js gulpfile.js",
